--- a/src/main/webapp/app/entities/venta/venta-detail.component.html
+++ b/src/main/webapp/app/entities/venta/venta-detail.component.html
@@ -37,18 +37,6 @@
                 <dd>
                     <span>{{venta.metaData}}</span>
                 </dd>
-                <dt><span>Cliente</span></dt>
-                <dd>
-                    <div *ngIf="venta.clienteId">
-                        <a [routerLink]="['/cliente', venta.clienteId, 'view']">{{venta.clienteNombre}}</a>
-                    </div>
-                </dd>
-                <dt><span>Empleado</span></dt>
-                <dd>
-                    <div *ngIf="venta.empleadoId">
-                        <a [routerLink]="['/empleado', venta.empleadoId, 'view']">{{venta.empleadoNombre}}</a>
-                    </div>
-                </dd>
                 <dt><span>Caja</span></dt>
                 <dd>
                     <div *ngIf="venta.cajaId">
@@ -67,6 +55,18 @@
                         <a [routerLink]="['/tipo-de-pago', venta.tipoDePagoId, 'view']">{{venta.tipoDePagoNombre}}</a>
                     </div>
                 </dd>
+                <dt><span>Cliente</span></dt>
+                <dd>
+                    <div *ngIf="venta.clienteId">
+                        <a [routerLink]="['/cliente', venta.clienteId, 'view']">{{venta.clienteNombre}}</a>
+                    </div>
+                </dd>
+                <dt><span>Empleado</span></dt>
+                <dd>
+                    <div *ngIf="venta.empleadoId">
+                        <a [routerLink]="['/empleado', venta.empleadoId, 'view']">{{venta.empleadoNombre}}</a>
+                    </div>
+                </dd>
                 <dt><span>Productos</span></dt>
                 <dd>
                     <span *ngFor="let productos of venta.productos; let last = last">
@@ -77,6 +77,12 @@
                 <dd>
                     <span *ngFor="let productoDetalles of venta.productoDetalles; let last = last">
                         <a [routerLink]="['/producto-detalle', productoDetalles?.id, 'view' ]">{{productoDetalles.id}}</a>{{last ? '' : ', '}}
+                    </span>
+                </dd>
+                <dt><span>Amortizacion</span></dt>
+                <dd>
+                    <span *ngFor="let amortizacion of venta.amortizacions; let last = last">
+                        <a [routerLink]="['/amortizacion', amortizacion?.id, 'view' ]">{{amortizacion.id}}</a>{{last ? '' : ', '}}
                     </span>
                 </dd>
             </dl>
