--- a/frontend/src/app/ventas/sell/sell-update.component.html
+++ b/frontend/src/app/ventas/sell/sell-update.component.html
@@ -18,7 +18,7 @@
 </div>
 
 <div fxLayout="row wrap">
-  <mat-card fxFlex.gt-lg="55" fxFlex.gt-md="55" fxFlex.gt-sm="55" fxFlex="100">
+  <mat-card fxFlex.gt-lg="50" fxFlex.gt-md="50" fxFlex.gt-sm="50" fxFlex="100">
     <mat-card-content>
 
       <div fxLayout="row wrap">
@@ -28,7 +28,7 @@
         </mat-form-field>
       </div>
 
-      <div fxLayout="bg-light">
+      <div id="product-layout"fxLayout="bg-light">
 
         <div fxFlex.gt-lg="25" fxFlex.gt-md="33" fxFlex.gt-xs="33" fxFlex="100" *ngFor="let product of productos ">
           <mat-card class="oh" (click)="openDialogVariantSelection(product)">
@@ -46,13 +46,13 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-card *ngIf="stateStep === 'sell'" fxFlex.gt-lg="40" fxFlex.gt-md="40" fxFlex.gt-sm="40" fxFlex="100">
+  <mat-card *ngIf="stateStep === 'sell'" fxFlex.gt-lg="35" fxFlex.gt-md="35" fxFlex.gt-sm="35" fxFlex="100">
     <mat-card-content>
         <div *ngIf="client.nombre === undefined" fxLayout="row wrap">
-            <mat-form-field fxFlex.gt-sm="87" fxFlex="87" (click)="stateStep = 'clientList'">
+            <mat-form-field fxFlex.gt-sm="85" fxFlex="85" (click)="stateStep = 'clientList'">
               <input matInput [(ngModel)]="currentSearchProduct" placeholder="Seleccionar Cliente" (keyup)="validateSearchProduct()" (keyup.enter)="searchProduct(currentSearchProduct)" >
             </mat-form-field>
-            <button mat-icon-button color= "primary" (click)="stateStep = 'clientUpdate'"><mat-icon>person_add</mat-icon></button>
+            <button id= "btn-add-person" mat-icon-button color= "primary" (click)="stateStep = 'clientUpdate'"><mat-icon>person_add</mat-icon></button>
           </div>
 
         <div fxLayout="row wrap" *ngIf="client.nombre !== undefined">
@@ -110,7 +110,7 @@
               </ng-container>
 
               <ng-container matColumnDef="quitar">
-                <mat-header-cell *matHeaderCellDef> Quitar </mat-header-cell>
+                <mat-header-cell *matHeaderCellDef> </mat-header-cell>
                 <mat-cell *matCellDef="let row;let i = index">
                   <span class="header-label">Quitar:</span>
                   <a (click)="deleteProductosDetalles(i, row)" class="ng-star-inserted">
@@ -161,7 +161,7 @@
 
     <div class="button-row">
       <button mat-raised-button style="background-color: #1ab394; color: white; border-radius: initial; width:72%" [disabled]="client.id === undefined || entity.productoDetalles.length === 0 || entity.montoTotal < 1" (click)="addExtraInfoSell()">Vender</button>
-      <button mat-raised-button style="width:136px; border-radius: initial;"(click)="previousState()">Cancelar</button>
+      <button mat-raised-button style="width:28%; border-radius: initial;"(click)="previousState()">Cancelar</button>
     </div>
   </mat-card>
 
