--- a/frontend/src/app/ventas/sell/sell-update.component.scss
+++ b/frontend/src/app/ventas/sell/sell-update.component.scss
@@ -15,10 +15,17 @@
   background-color: #1e88e5;
   border-radius: 2px;
   margin-right: 10px;
+  margin-left: 10px;
+  
 }
 
 .mat-button.mat-primary, .mat-icon-button.mat-primary, .mat-stroked-button.mat-primary{
   color: white;
+}
+
+.foot-div{
+  position: relative;
+  top: 1000%;
 }
 
 input.mat-input-element{
