--- a/frontend/src/app/ventas/sell/sell-update.component.html
+++ b/frontend/src/app/ventas/sell/sell-update.component.html
@@ -51,11 +51,13 @@
   <mat-card *ngIf="stateStep === 'sell'" fxFlex.gt-lg="35" fxFlex.gt-md="35" fxFlex.gt-sm="35" fxFlex="100">
     <mat-card-content>
         <div *ngIf="client.nombre === undefined" fxLayout="row wrap">
+            <div style="display: flex; width: 100%">
             <mat-form-field fxFlex.gt-sm="85" fxFlex="85" (click)="stateStep = 'clientList'">
               <input matInput [(ngModel)]="currentSearchProduct" placeholder="Seleccionar Cliente" (keyup)="validateSearchProduct()" (keyup.enter)="searchProduct(currentSearchProduct)" >
             </mat-form-field>
-            <button id= "btn-add-person" mat-icon-button color= "primary" (click)="stateStep = 'clientUpdate'"><mat-icon>person_add</mat-icon></button>
+            <button fxFlex="10" id= "btn-add-person" mat-icon-button color= "primary" (click)="stateStep = 'clientUpdate'"><mat-icon>person_add</mat-icon></button>
           </div>
+        </div>
 
         <div fxLayout="row wrap" *ngIf="client.nombre !== undefined">
             <mat-form-field fxFlex.gt-sm="87" fxFlex="87">
