fixes fulled in sells

--- a/frontend/src/app/pages2/invoice/invoice2.component.html
+++ b/frontend/src/app/pages2/invoice/invoice2.component.html
@@ -8,8 +8,8 @@
         <span>CAL. ALFONZO UGARTE NRO. 127 - LORETO BELEN</span>
         <span>949451724</span>
         <span>RUC: 20603441223</span>
-        <span>{{venta.tipoDeDocumentoDeVentaNombre}}</span>
-        <span>{{venta.codigo}}</span>
+        <span>{{amortizationSelected.tipoDeDocumentoDeVentaNombre}}</span>
+        <span>{{amortizationSelected.codigo}}</span>
       </div>
     </div>
 
@@ -29,7 +29,7 @@
         <div fxLayout="column">
           <span></span>
           <span>DNI/RUC</span>
-          <span>{{venta.amortizacions[0].codigoDocumento}}</span>
+          <span>{{amortizationSelected.codigoDocumento}}</span>
           <span></span>
           <span></span>
         </div>
