--- a/src/main/webapp/app/entities/amortizacion/amortizacion-detail.component.html
+++ b/src/main/webapp/app/entities/amortizacion/amortizacion-detail.component.html
@@ -5,6 +5,10 @@
             <hr>
             <jhi-alert-error></jhi-alert-error>
             <dl class="row-md jh-entity-details">
+                <dt><span>Codigo</span></dt>
+                <dd>
+                    <span>{{amortizacion.codigo}}</span>
+                </dd>
                 <dt><span>Monto</span></dt>
                 <dd>
                     <span>{{amortizacion.monto}}</span>
