--- a/src/main/webapp/app/entities/amortizacion/amortizacion-update.component.html
+++ b/src/main/webapp/app/entities/amortizacion/amortizacion-update.component.html
@@ -10,6 +10,21 @@
                         [(ngModel)]="amortizacion.id" readonly />
                 </div>
                 <div class="form-group">
+                    <label class="form-control-label" for="field_codigo">Codigo</label>
+                    <input type="text" class="form-control" name="codigo" id="field_codigo"
+                        [(ngModel)]="amortizacion.codigo" required maxlength="150"/>
+                    <div [hidden]="!(editForm.controls.codigo?.dirty && editForm.controls.codigo?.invalid)">
+                        <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.codigo?.errors?.required">
+                        This field is required.
+                        </small>
+                        <small class="form-text text-danger"
+                        [hidden]="!editForm.controls.codigo?.errors?.maxlength">
+                        This field cannot be longer than 150 characters.
+                        </small>
+                    </div>
+                </div>
+                <div class="form-group">
                     <label class="form-control-label" for="field_monto">Monto</label>
                     <input type="number" class="form-control" name="monto" id="field_monto"
                         [(ngModel)]="amortizacion.monto" required/>
