--- a/frontend/src/app/ventas/sell/sell-update.component.html
+++ b/frontend/src/app/ventas/sell/sell-update.component.html
@@ -32,7 +32,7 @@
 
       <div id="product-layout" fxLayout="row wrap">
 
-        <div fxFlex.gt-lg="25" fxFlex.gt-md="25" fxFlex.gt-xs="25" fxFlex="100" *ngFor="let product of productos ">
+        <div fxFlex.gt-lg="20" fxFlex.gt-md="20" fxFlex.gt-xs="20" fxFlex="100" *ngFor="let product of productos ">
           <mat-card class="oh" (click)="openDialogVariantSelection(product)">
               <h6 class="m-0">S/. {{product.precioVenta}}</h6>
             <img mat-card-image [src]="product.imagen ? 'data:' + product.imagenContentType + ';base64,' + product.imagen : 'assets/images/big/img1.jpg'" alt="Photo of a Shiba Inu">
@@ -51,16 +51,15 @@
   <mat-card *ngIf="stateStep === 'sell'" fxFlex.gt-lg="35" fxFlex.gt-md="35" fxFlex.gt-sm="35" fxFlex="100">
     <mat-card-content>
         <div *ngIf="client.nombre === undefined" fxLayout="row wrap">
-            <div style="display: flex; width: 100%">
-            <mat-form-field fxFlex.gt-sm="85" fxFlex="85" (click)="stateStep = 'clientList'">
+          <div style="display: flex; width: 100%"></div>
+            <mat-form-field fxFlex.gt-sm="80" fxFlex="80" (click)="stateStep = 'clientList'">
               <input matInput [(ngModel)]="currentSearchProduct" placeholder="Seleccionar Cliente" (keyup)="validateSearchProduct()" (keyup.enter)="searchProduct(currentSearchProduct)" >
             </mat-form-field>
-            <button fxFlex="10" id= "btn-add-person" mat-icon-button color= "primary" (click)="stateStep = 'clientUpdate'"><mat-icon>person_add</mat-icon></button>
+            <button id= "btn-add-person" mat-icon-button color= "primary" (click)="stateStep = 'clientUpdate'"><mat-icon>person_add</mat-icon></button>
           </div>
-        </div>
 
         <div fxLayout="row wrap" *ngIf="client.nombre !== undefined">
-            <mat-form-field fxFlex.gt-sm="87" fxFlex="87">
+            <mat-form-field fxFlex.gt-sm="80" fxFlex="80">
               <input matInput [(ngModel)]="client.nombre" disabled >
             </mat-form-field>
             <button mat-icon-button color= "primary" (click)="removeCliente()"><mat-icon>delete</mat-icon></button>
