--- a/frontend/src/app/ventas/sell/sell-update.component.scss
+++ b/frontend/src/app/ventas/sell/sell-update.component.scss
@@ -37,19 +37,22 @@ input.mat-input-element{
 .mat-card-image{
   border-radius: initial;
   margin-bottom: -12px;
+  margin-top: -6px;
+  cursor: pointer;
 }
 
 .m-0 {
 opacity: 0.7;
 color: #fff !important;
-font-size: 12px;
+font-size: 11px;
 font-weight: bold;
 width: 100%;
 background-color: black;
-padding: 2px 2px 2px 4px;
+padding: 2px 2px 2px 0px;
 white-space: nowrap;
 display: inline-block;
 margin-top: 6px;
+cursor: pointer;
 }
 
 .oh mat-card{
@@ -58,12 +61,13 @@ margin-top: 6px;
 }
 
 .mat-card{
-  width: 50%;
+  width: 65%;
 }
 
 .mat-card-content > :first-child, .mat-card > :first-child{
   margin-top: 0;
   text-align: right;
+  overflow: auto;
 }
 
 .mat-elevation-z8{
